dongout chart added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,9 @@
   <h3>pie Chart</h3>
 <canvas id="piechart"></canvas>
 </div>
+<div class="charts">
+  <h3>Doughnut</h3>
+<canvas id="doughchart"></canvas>
+</div>
 
 
